--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!doctype html>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 <html lang="en">
   <body>
     <div id="root"></div>
